# wine_wiki_site

./: .gitignore  README.md  django_project_structure.md  manage.py  pyproject.toml
backup/: default-jonoscomp.local-2025-08-04-152514.dump
dev/: log.md
devspace/: log.md
wine_list_db/: section.csv  subsection.csv  subsubsection.csv  wine_list.csv
wine_wiki/: README.rst  admin.py  apps.py  asgi.py  models.py  settings.py  urls.py  views.py  wsgi.py
wine_wiki/dev/: sample_wine_data.py  todo.md  wine_list_categories.py
wine_wiki/migrations/: 0001_initial.py  0002_populate_section.py  0003_populate_subsection.py  0004_populate_wines.py  0005_subsubsection.py  0006_alter_wine_description.py  0007_wine_modification_on.py  0008_wine_last_modification_by.py  0009_alter_producer_description_alter_producer_region.py  0009_modify_fill_producer.py  0010_insert_wine_producer_id.py  0010_rename_producer_name_producer_name.py  0011_alter_wine_producer_as_fk.py  0011_insert_producer.py  0011_populate_producer.py  0012_alter_producer_name.py  0012_remove_wine_producer_name.py  0013_rename_producer_wine_producer_name.py  0013_update_wine_variety_set_null_blank.py  0013_variety.py  0013_variety_squashed_0018_remove_wine_variety_old.py  0014_create_fill_variety_model.py  0014_populate_variety.py  0014_wine_producer_id.py  0015_insert_wine_producer_id.py  0015_rename_variety_wine_variety_old_wine_variety_id.py  0015_rename_wine_variety_variety_old.py  0016_add_field_wine_variety.py  (+10 more)
wine_wiki_site/: apps.py  dev_settings.py  prod_settings.py  settings.py  urls.py  wsgi.py
(+23 files in other folders)
