[project]
name = "wine-wiki-site"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "django-types>=0.20.0",
  "django>=5.2.1",
  "django-stubs>=5.2.0",
  "django-extensions>=4.1",
  "duckdb>=1.3.2",
  "pandas>=2.3.1",
  "django-funky-sheets>=0.2.0",
]
