[project]
name = "wine-wiki-site"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "django-types>=0.20.0",
  "django>=5.2.1",
  "django-stubs>=5.2.0",
  "django-extensions>=4.1",
  "python-dotenv>=1.1.1",
  "djlint>=1.36.4",
]
[tool.djlint]
profile = "django"
